Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,5 @@
 <h1> My music list</h1>
-<p>A few of my favorite songs!
-</p>
+<p>A few of my favorite songs!</p>
 
 <ul>
   <li> "Love Will Tear Us Apart" </li>
